--- a/estilos/style.css
+++ b/estilos/style.css
@@ -4,7 +4,7 @@
 }
 
 body {
-    background-color: rgb(184, 118, 247);
+    background-color: rgb(130, 137, 228);
 
 }
 
@@ -14,5 +14,8 @@ main {
     margin: auto;
     padding: 10px;
     box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.452);
+}
 
+img.lado {
+    float: right;
 }
